--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="preload" as="image" href="IMG_7423.webp" fetchpriority="high">
     <link rel="preload" as="image" href="Beige-and-Blue.png">
     <link rel="preload" as="image" href="Black-and-Blue.png">
-    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,500&family=Lato:wght@300;400&family=Pinyon+Script&display=swap" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,500&family=Lato:wght@300;400&family=Montserrat:wght@300;400;500;600&display=swap" rel="stylesheet"/>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet"/>
     <style>
         :root {
@@ -63,7 +63,7 @@
 
         /* Utility Classes */
         .font-display { font-family: 'Cormorant Garamond', serif; }
-        .font-script { font-family: 'Pinyon Script', cursive; }
+        .font-script { font-family: 'Montserrat', sans-serif; }
 
         /* Animations */
         @keyframes float {
@@ -547,7 +547,7 @@
         }
 
         .hero-eyebrow {
-            font-family: 'Pinyon Script', cursive;
+            font-family: 'Montserrat', sans-serif;
             font-size: clamp(2rem, 5vw, 3.5rem);
             margin-bottom: 0.5rem;
             margin-top: -60px;
@@ -644,7 +644,7 @@
 
         /* Section Styles */
         .section-script {
-            font-family: 'Pinyon Script', cursive;
+            font-family: 'Montserrat', sans-serif;
             font-size: clamp(1.8rem, 3vw, 2.5rem);
             color: var(--rose-gold);
             margin-bottom: 0.5rem;
@@ -984,7 +984,7 @@
         }
 
         .testimonial-author {
-            font-family: 'Pinyon Script', cursive;
+            font-family: 'Montserrat', sans-serif;
             font-size: 1.5rem;
             color: var(--soft-gold);
         }
@@ -1305,7 +1305,7 @@
         }
 
         .gallery-text .script {
-            font-family: 'Pinyon Script', cursive;
+            font-family: 'Montserrat', sans-serif;
             font-size: clamp(1.8rem, 4.5vw, 3.5rem);
             line-height: 1.2;
             text-shadow: 0 4px 30px rgba(0,0,0,0.3);
@@ -1529,6 +1529,11 @@
             .gallery-fullbleed {
                 height: 70vh;
                 min-height: 400px;
+            }
+
+            .gallery-asymmetric-img {
+                height: 60vh;
+                min-height: 350px;
             }
         }
 
